add _ Sending Image to Specific User

--- a/app/src/main/res/layout/activity_show_capture.xml
+++ b/app/src/main/res/layout/activity_show_capture.xml
@@ -16,8 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:text="save to stories"
-        android:id="@+id/saveStory"
+        android:text="Send Image"
+        android:id="@+id/send"
         />
 
 </FrameLayout>
