update _ change in app UI and solve some bugs

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name_register"
-        android:hint="Email"
+        android:hint="Name"
         />
     <EditText
         android:layout_width="match_parent"
