--- a/app/src/main/res/layout/recyclerview_receiver_item.xml
+++ b/app/src/main/res/layout/recyclerview_receiver_item.xml
@@ -10,9 +10,10 @@
         android:id="@+id/email"
         android:padding="20dp"
         android:textSize="14dp"
+        android:text="receiver"
         />
 
-    <view
+    <View
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_weight="1"
