--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".MainActivity">
 
     <View
         android:id="@+id/bg_color"
@@ -20,5 +20,16 @@
         android:layout_height="wrap_content">
 
     </android.support.v4.view.ViewPager>
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_marginTop="14dp"
+        android:background="#000000"
+        app:tabTextColor="#ffffff"
+        app:tabSelectedTextColor="#FFEB3B"
+        android:layout_width="match_parent"
+        android:layout_height="@android:dimen/app_icon_size">
+
+    </android.support.design.widget.TabLayout>
 
 </RelativeLayout>
