--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,10 @@
     <View
         android:id="@+id/bg_color"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_blue">
+        android:layout_height="wrap_content"
+        android:background="@color/bg_blue"
+        android:alpha=".5"
+        >
 
     </View>
 
@@ -21,15 +23,13 @@
 
     </android.support.v4.view.ViewPager>
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_marginTop="14dp"
-        android:background="#000000"
-        app:tabTextColor="#ffffff"
-        app:tabSelectedTextColor="#FFEB3B"
+    <com.ahmedteleb.requestchat.View.SnapTabsView
+        android:id="@+id/snap_tabs"
         android:layout_width="match_parent"
-        android:layout_height="@android:dimen/app_icon_size">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        >
 
-    </android.support.design.widget.TabLayout>
+    </com.ahmedteleb.requestchat.View.SnapTabsView>
 
 </RelativeLayout>
