--- a/app/src/main/res/drawable/big_circle.xml
+++ b/app/src/main/res/drawable/big_circle.xml
@@ -3,4 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke android:color="#ffffff" android:width="6dp"/>
+    <solid android:color="@android:color/transparent"/>
 </shape>
