--- a/app/src/main/res/drawable/indicator_background.xml
+++ b/app/src/main/res/drawable/indicator_background.xml
@@ -2,5 +2,5 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="2dp"/>
-    <solid android:color="#ffffff"/>
+    <solid android:color="@color/white"/>
 </shape>
