--- a/app/src/main/res/drawable/small_circle.xml
+++ b/app/src/main/res/drawable/small_circle.xml
@@ -3,4 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke android:color="#ffffff" android:width="4dp"/>
+    <solid android:color="@android:color/transparent"/>
+
 </shape>
