--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -31,12 +31,13 @@
             />
     </LinearLayout>
 
-    <Button
+    <com.ahmedteleb.requestchat.View.SnapTabsView
+        android:id="@+id/snap_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="capture"
-        android:id="@+id/capture"
         android:layout_gravity="bottom"
-        />
+        >
+
+    </com.ahmedteleb.requestchat.View.SnapTabsView>
 
 </FrameLayout>
