--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="bg_blue">#4589f7</color>
     <color name="bg_foshia">#f43558</color>
     <color name="bg_light_green">#8fd872</color>
+    <color name="white">#ffffff</color>
+    <color name="light_gray">#ADAFAD</color>
 
 </resources>
